// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Mock render - areas.extra - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        extra
      </div>,
      "icon": undefined,
      "id": "areas.extra",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - default - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "default",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. icon: ApiFilled - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": <IconBlock
        actions={Object {}}
        blockId="properties. icon: ApiFilled_icon"
        content={Object {}}
        list={Array []}
        menus={Array []}
        methods={
          Object {
            "callAction": [Function],
            "makeCssClass": [Function],
            "registerAction": [Function],
            "registerMethod": [Function],
          }
        }
        properties="ApiFilled"
        required={false}
        user={Object {}}
        validation={
          Object {
            "errors": Array [],
            "status": null,
            "warnings": Array [],
          }
        }
      />,
      "id": "properties. icon: ApiFilled",
      "status": undefined,
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 403 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 403",
      "status": "403",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 404 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 404",
      "status": "404",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: 500 - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: 500",
      "status": "500",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: error - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: error",
      "status": "error",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: info - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: info",
      "status": "info",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: success  default is info - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: success  default is info",
      "status": "success",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties. status: warning - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties. status: warning",
      "status": "warning",
      "subTitle": undefined,
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.subTitle: subTitle text - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties.subTitle: subTitle text",
      "status": undefined,
      "subTitle": "subTitle text",
      "title": undefined,
    },
    Object {},
  ],
]
`;

exports[`Mock render - properties.title - value[0] - default 1`] = `
Array [
  Array [
    Object {
      "children": <div
        style={
          Object {
            "border": "1px solid red",
            "padding": 10,
          }
        }
      >
        content
      </div>,
      "extra": undefined,
      "icon": undefined,
      "id": "properties.title",
      "status": undefined,
      "subTitle": undefined,
      "title": "Result title",
    },
    Object {},
  ],
]
`;
